--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "react": "18.2.0",
     "react-native": "0.74.2",
